<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fielden</groupId>
	<artifactId>platform-parent</artifactId>
	<packaging>pom</packaging>
	<version>1.3-SNAPSHOT</version>
	<name>Trident Genesis Platform Parent</name>
	<description>
		Trident Genesis is a software application platform designed for
		development of EAM/ERP type applications supporting Client/Server and RIA/ROA architectures.
		Its main goal is to provide a holistic solution for development of information system with domain oriented approach.
	</description>
	<url>https://www.fielden.com.ua/trac/pnl-tg/
	</url>
	<inceptionYear>2008</inceptionYear>
	<organization>
		<name>Fielden Management Services</name>
		<url>http://www.fielden.com.au/</url>
	</organization>
	<developers>
		<developer>
			<id>01es</id>
			<url />
			<name>Oles Hodych</name>
			<organization>FMS.ua</organization>
			<organizationUrl>
				http://www.fielden.com.ua/
			</organizationUrl>
			<email>oles@fielden.com.au</email>
			<timezone>+2</timezone>
			<roles>
				<role>owner</role>
			</roles>
		</developer>
		<developer>
			<id>nazar</id>
			<url />
			<name>Nazar Chaykivskyy</name>
			<organization>FMS.ua</organization>
			<organizationUrl>
				http://www.fielden.com.ua/
			</organizationUrl>
			<email>nazar@fielden.com.au</email>
			<timezone>+2</timezone>
			<roles>
				<role>owner</role>
			</roles>
		</developer>
		<developer>
			<id>jhou</id>
			<url />
			<name>Yura Prokopiv</name>
			<organization>FMS.ua</organization>
			<organizationUrl>
				http://www.fielden.com.ua/
			</organizationUrl>
			<email>jhou@fielden.com.au</email>
			<timezone>+2</timezone>
			<roles>
				<role>owner</role>
			</roles>
		</developer>
		<developer>
			<id>oleh</id>
			<url />
			<name>Oleh Maykovych</name>
			<organization>FMS.ua</organization>
			<organizationUrl>
				http://www.fielden.com.ua/
			</organizationUrl>
			<email>oleh@fielden.com.au</email>
			<timezone>+2</timezone>
			<roles>
				<role>owner</role>
			</roles>
		</developer>
	</developers>
	<modules>
		<module>platform-annotations</module>
		<module>platform-annotation-processor</module>
		<module>platform-application-bootstrap</module>
		<module>platform-db-evolution</module>
		<module>platform-dao</module>
		<module>platform-gps-server</module>
		<module>platform-web-resources</module>
		<module>platform-pojo-bl</module>
		<module>platform-rao</module>
		<module>platform-ui</module>
		<module>platform-web-ui</module>
		<module>platform-web-client-utils</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.5</version>
		</dependency>

		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>4.0-beta5</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.13</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.0.4</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>commons-jexl</groupId>
			<artifactId>commons-jexl</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.4</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>commons-digester</groupId>
			<artifactId>commons-digester</artifactId>
			<version>1.7</version>
		</dependency>
		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>itext</artifactId>
			<version>2.1.7</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>1.5.5</version>
		</dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.3</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<encoding>UTF-8</encoding>
						<optimize>true</optimize>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<!-- forkMode>pertest</forkMode -->
						<argLine>-Djava.system.class.loader=ua.com.fielden.platform.classloader.TgSystemClassLoader</argLine>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>1.2</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jvnet.maven.incrementalbuild</groupId>
				<artifactId>incremental-build-plugin</artifactId>
				<version>1.3</version>
				<executions>
					<execution>
						<goals>
							<goal>incremental-build</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<tagBase>https://www.fielden.com.ua/svn/trident-genesis/tags/releases</tagBase>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>1.2</version>
			</plugin>
		</plugins>
	</reporting>

	<issueManagement>
		<system>FMS Trac</system>
		<url>https://www.fielden.com.ua/trac/pnl-tg/report
		</url>
	</issueManagement>

	<distributionManagement>
		<repository>
			<id>Releases</id>
			<name>Internal Releases</name>
			<url>http://www.fielden.com.ua:8090/nexus/content/repositories/releases</url>
		</repository>

		<snapshotRepository>
			<id>Snapshots</id>
			<name>Internal Snapshots</name>
			<url>http://www.fielden.com.ua:8090/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<scm>
		<connection>scm:git:git@github.com:fieldenms/tg.git</connection>
		<url>scm:git:git@github.com:fieldenms/tg.git</url>
		<developerConnection>scm:git:git@github.com:fieldenms/tg.git</developerConnection>
	</scm>

</project>
